# sphecial-harmonic-plotter-tayra

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  main.yaml
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sphecial_harmonic_plotter_tayra.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  sphecial_harmonic_plotter_tayra.doctree
docs/_modules/: index.html
docs/_modules/sphecial_harmonic_plotter_tayra/: _calc.html  _plot.html
docs/_sources/: modules.rst.txt  sphecial_harmonic_plotter_tayra.rst.txt
docs_src/source/: conf.py  index.rst
src/sphecial_harmonic_plotter_tayra/: __about__.py  __init__.py  __main__.py  _calc.py  _plot.py
tests/: __init__.py  test_plot.py
